Remove default values.

--- a/html/index.html
+++ b/html/index.html
@@ -27,11 +27,11 @@
   <div id="input">
     Setting
     <br />
-    <input id="inputIp" type="text" name="ip" value="106.13.76.148">IP address of server.</input>
+    <input id="inputIp" type="text" name="ip">IP address of server.</input>
     <br />
     <input id="inputPort" type="text" name="port" value=8000>Listening port of server.</input>
     <br />
-    <input id="streamAddress" type="text" name="rtmp stream address" value="rtmp://www.iptv-soft.com/live/111">Address
+    <input id="streamAddress" type="text" name="rtmp stream address">Address
     of RTMP stream.</input>
   </div>
   <div id="controls">
