--- a/html/index.html
+++ b/html/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-  <video id="player" autoplay muted></video>
+  <video id="player" autoplay muted controls></video>
   <div id="input">
     Setting
     <br />
